--- a/app/src/main/res/layout/item_single_bowling_data.xml
+++ b/app/src/main/res/layout/item_single_bowling_data.xml
@@ -13,19 +13,45 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/name"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1.5"
-            android:autoSizeMaxTextSize="12sp"
-            android:autoSizeMinTextSize="11sp"
-            android:autoSizeTextType="uniform"
-            android:gravity="center"
-            android:maxLines="2"
-            android:textColor="@color/textColor"
-            android:textSize="12sp" />
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="2dp"
+                android:autoSizeMaxTextSize="12sp"
+                android:autoSizeMinTextSize="11sp"
+                android:autoSizeTextType="uniform"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="@color/textColor"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="2dp"
+                android:autoSizeMaxTextSize="12sp"
+                android:autoSizeMinTextSize="11sp"
+                android:autoSizeTextType="uniform"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="@color/textColor"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
 
 
         <TextView
