--- a/app/src/main/res/layout/fragment_bowling.xml
+++ b/app/src/main/res/layout/fragment_bowling.xml
@@ -200,10 +200,54 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="10"
+            tools:itemCount="3"
             tools:listitem="@layout/item_single_batting_data" />
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/load_more"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="5dp"
+            app:strokeColor="#A6D1C4">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:text="Load More"
+                    android:textAllCaps="true"
+                    android:textColor="@color/textColor"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="5dp"
+                    android:src="@drawable/ic_swipe_right"
+                    app:tint="@color/textColor" />
+
+
+            </LinearLayout>
+
+
+        </com.google.android.material.card.MaterialCardView>
 
 
     </LinearLayout>
