--- a/app/src/main/res/layout/layout_squad.xml
+++ b/app/src/main/res/layout/layout_squad.xml
@@ -135,6 +135,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerViewTopBowlers"
                         android:layout_width="match_parent"
+                        tools:itemCount="6"
+                        tools:listitem="@layout/item_single_player"
                         android:layout_height="wrap_content" />
 
 
